--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.21.0",
     "json-server": "^1.0.0-beta.2",
     "mongoose": "^8.6.3",
