--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "env": "^0.0.2",
     "express": "^4.21.0",
     "json-server": "^1.0.0-beta.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.6.3",
     "pug": "^3.0.3"
   },
