--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.21.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "json-server": "^1.0.0-beta.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.6.3",
+    "mongoose-slug-updater": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.3"
   },
   "devDependencies": {
