--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "json-server": "^1.0.0-beta.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
