--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json-server": "^1.0.0-beta.2",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "mongoose-slug-updater": "^3.3.0",
